# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  configuration.yaml  notes.md  spec.yaml
.sqlx/: query-419174231f130f1b104cd3b5f8eb98cf18bd866b0cbdb69b9ebafee0888c496d.json  query-cfaefb4fa700cf4acbc196eb0ee72859dfbcdcb455069590e8c0be3fdf7842d5.json
configuration/: base.yaml  local.yaml  production.yaml
fakemail/: README.md  main.go
migrations/: 20240427210606_create_subscriptions_table.sql  20240505132817_make_status_not_null_in_subscriptions.sql  20240505133207_create_subscription_tokens_table.sql  20240530030021_seed_user.sql  20240818155915_create_idemoptency_table.sql  20240818170241_fix_idempotency_table_name.sql  20240819004247_create_newsletter_issues_table.sql  20240819004627_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  login.rs  main.rs  newsletter.rs  spawn_app.rs  subscriptions.rs  subscriptions_confirm.rs
